fixed overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ main{
     background-size: cover;
     height: 105vh;
     color: white;
-    padding-bottom: 3.5rem;
+    padding-bottom: 3.5gitrem;
     
    
 }
@@ -537,7 +537,12 @@ main{
     
 } */
 
-
+.square{
+  overflow: hidden;
+}
+.mid{
+  overflow: hidden;
+}
 
 
 
@@ -572,7 +577,7 @@ main{
 @keyframes wipe-enter-left {
 
 	0% {
-    transform: translate(-90px, 0%);
+    transform: translate(-50px, 0%);
 		opacity: 0.1;
 	}
 	100% {
@@ -583,7 +588,7 @@ main{
 @keyframes wipe-enter-right {
 
 	0% {
-    transform: translate(90px, 1%);
+    transform: translate(50px, 1%);
 		opacity: 0.1;
 	}
 	100% {
